fix(buttons, anchors): Aligning hub submit button styles with call-to-action. - Removing text decoration from buttons. - Making sure anchors are underlined/bolded for appropriate elements (not in box, call-to-action, or dropdown-item).

--- a/director/assets/sass/form/elements/_submit-button.sass
+++ b/director/assets/sass/form/elements/_submit-button.sass
@@ -9,5 +9,10 @@ button[type="submit"]
 
     line-height: 0 !important
 
+    // Align styles with call-to-action
+    padding: $stencila-call-to-action-padding
+    text-transform: uppercase
+    font-weight: $weight-semibold
+
     .modal-card-foot &
-      border-radius: $radius-small
+        padding: $stencila-call-to-action-padding
