--- a/director/assets/sass/overrides/_button.sass
+++ b/director/assets/sass/overrides/_button.sass
@@ -2,4 +2,4 @@
 /// Button overrides
 ////
 .button
-    text-decoration: none
+    text-decoration: none !important
