--- a/director/assets/sass/overrides/_typography.sass
+++ b/director/assets/sass/overrides/_typography.sass
@@ -1,10 +1,10 @@
 ////
 /// Typography overrides.
 ////
-.content
-    a
+.content, .section
+    a:not(.box):not(.call-to-action):not(.dropdown-item)
         font-weight: $weight-bold
         text-decoration: underline
-        
+
         &:hover
             text-decoration: none
